# tloc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: calculations.md  contributing.md  options.md  options.txt
scripts/: debug.sh  install.sh  run.sh  test.sh
src/: app.c  app.h  language.c  language.h  options.c  options.h  summary.c  summary.h  tloc.c  utils.c  utils.h
tests/: language_test.c  language_test.h  options_test.c  options_test.h  tloc_test.c  utils_test.c  utils_test.h
